--- a/Revision/Modern Tooling/index.html
+++ b/Revision/Modern Tooling/index.html
@@ -6,6 +6,6 @@
 </head>
 <body style="background-color: black;">
    <h1 style="color: wheat;"> Modern Tooling</h1>
-    <script src='script.js'></script>
+    <script type="module" src='assign.js'></script>
 </body>
 </html>
